administrator/templates/atum/scss/blocks/_sidebar.scss
// Sidebar

.wrapper {
  transition: all .3s ease;

  @include media-breakpoint-down(sm) {
    padding-left: 0;
  }

  &.closed {
     a.btn-dashboard {
       display: none
    }
    .main-nav {
      max-width: 3rem;
    }
    .menu-dashboard {
      display: none;
    }
  }
}

.sidebar-wrapper {
  position: relative;
  top: 0;
  z-index: $zindex-sidebar;
  background-color: var(--atum-bg-dark);
  box-shadow: $atum-box-shadow;
  overflow: hidden;
  @include media-breakpoint-up(sm){
    display: flex;
    flex-direction: column;
    flex: 1 0 $sidebar-width;
    max-width: $sidebar-width;
    transition: all .3s ease;
  }

  @include media-breakpoint-down(xs) {
    &.sidebar-menu {
      /*height: 0;*/
      bottom: 0;
       top: auto;
    }
    &:not(.sidebar-menu){
      display: flex;
      flex-direction: column;
      flex: 1 0 $sidebar-width;
      max-width: $sidebar-width;
      transition: all .3s ease;
    }
  }

  .main-brand {
    padding: 15px;
    margin-top: auto;
  }

  .view-login & {
    flex: 1 0 33%;
    max-width: $sidebar-width-login;

    &.transit-narrow {
      flex: 1 0 $sidebar-width;
      transition: flex 3s;

      @include media-breakpoint-down(sm) {
        @include fadeout-page;
      }
    }

    &.transit-narrow-closed {
      flex: 1 0 $sidebar-width-closed;
      transition: flex 3s;

      @include media-breakpoint-down(sm) {
        @include fadeout-page;
      }
    }
  }

  &.transit-wider {
    flex: 1 0 33%;
    max-width: $sidebar-width-login;
    transition: all 3s;

    @include media-breakpoint-down(sm) {
      @include fadein-page;
    }
  }

  .sidebar-toggle {
    position: relative;
    a {
      display: block;
      padding: 0 0.35rem;
      position: relative;
      color: var(--atum-text-light);
      height: 3.2rem;
      line-height: 3.2rem;
      &:hover {
        text-decoration: none;
      }
    }
  }


}

.menu-toggle-icon {
  width: $header-height;
  font-size: 1.7rem;
}

// Sidebar navigation
.main-nav {
  width: $sidebar-width;
  opacity: 1;

  @include media-breakpoint-down(xs) {
	  width: 100%;
  }

  ul.collapse {

    li.dropdown-submenu {
      display: block;
    }
  }

  .open > a {
    box-shadow: 0 2px 4px -4px rgba(0, 0, 0, 0.5);
  }

  // All list items
  li {
    color: var(--atum-text-light);
    list-style-type: none;
    position: relative;
    display: flex;
    flex-wrap: wrap;
    > a {
      flex-grow: 2;
    }

    .menu-dashboard, .menu-quicktask {
      position: relative;
      display:inline-block;
      top: -1px;
      a {
        padding: 0;
        display: inline-block;
        height:100%;
        .fa {
          display: flex;
          padding: 0 1rem;
          align-items: center;
          margin: 0;
        }
        &:hover {
            background-color: var(--atum-bg-dark-70);
            .fa {
             color: var(--atum-contrast);
            }
        }
      }
      &::before {
        background-image: none;
        width: 0;
      }
    }
    .menu-dashboard{
      a{

        .fa{
          align-items: flex-start;

        }
      }
    }
  }

	.sidebar-item-title{
	  word-break: break-word;
      padding:0.8rem 0;

	  @include media-breakpoint-up(sm) {
		max-width: 9rem !important;
		display: inline-block;
	  }
	  @include media-breakpoint-down(xs) {
		max-width: 60vw !important;
		display: inline-block;
	  }
	}

  // All links
  a {
    position: relative;
    color: var(--atum-text-light);

    &:hover {
      color: var(--atum-text-light);
      text-decoration: none;
	}
  }

  // 1st level items
  > li {

    > ul {
      background-color: var(--atum-bg-dark-70);
    }

    > a {
      display: block;
      padding: 0 0.35rem;

      &:hover {
        background-color: var(--atum-bg-dark-80);
        text-decoration: none;
      }
    }

    &.active {
      box-shadow: 0 1px 4px -1px rgba(0, 0, 0, .5);
    }
  }

  // 2nd level items
  ul {
    padding: 0;
    background-color: var(--atum-bg-dark-70);
    width: 100%;

    li {
      position: relative;
      display: flex;
    }

    a {
      display: block;
      padding: 0 1.25rem 0 1.25rem;
      color: var(--atum-text-light);

      &[href]:hover:not(.menu-dashboard):not(.menu-quicktask) {
        color: $white;
        background-color: rgba(0, 0, 0, .4);
      }

      &.active {
        color: $white;
        background-color: var(--atum-bg-dark-80);

        &::before {
          position: absolute;
          top: 0.15rem;
          bottom: 0.15rem;
          left: 0;
          width: 0.25rem;
          content: "";
          background-color: var(--atum-contrast);
        }
      }
  }

    // 3rd level items
    ul {
      background-color: var(--atum-bg-dark-80);

      a {
        padding-left: 1.25rem;

        &.active {
          color: $white;
          background-color: var(--atum-bg-dark-90);
          box-shadow: 0 1px 4px -1px rgba(0, 0, 0, .5);

          &::before {
            position: absolute;
            top: 0.15rem;
            bottom: 0.15rem;
            left: 0;
            width: 0.275rem;
            content: "";
            background-color: var(--atum-contrast);
          }
        }
      }

      a::before {
        left: 1.25rem;
      }

      //4th level
      ul {
        background-color: var(--atum-bg-dark-90);
      }
    }
  }

  .divider,
  .menuitem-group {
    list-style: none;

    a::before {
      display: none;
    }
  }

  .divider {
    height: 1px;
    margin: 4px 18px;
    background-color: var(--atum-bg-dark-40);
    opacity: .7;
  }

  .menuitem-group {
    margin-top: 0.65rem;
    font-size: .75rem;
    text-transform: uppercase;
    letter-spacing: 2px;
  }

  .collapse {
    display: none;

    &.in {
      display: block;
    }
  }

  .collapsing {
    position: relative;
    height: 0;
    overflow: hidden;
    transition-timing-function: ease;
    transition-duration: .35s;
    transition-property: height, visibility;
  }

  // Dropdown indicator
  .has-arrow::after {
    position: absolute;
    top: 1.5rem;
    right: 0.9em;
    width: .5rem;
    height: .5rem;
    color: var(--atum-text-light);
    content: "";
    border-color: initial;
    border-style: solid;
    border-width: 3px 0 0 3px;
    transition: all .3s ease-out;
    transform: rotate(-135deg) translate(0, -50%);
    transform-origin: top;
  }

  .active {

    > .has-arrow::after {
      transform: rotate(45deg) translate(0, -50%);
    }
  }

  // Parent icons
  .fa {
    position: relative;
    top: 1rem;
    display: inline-block;
    margin: 0 5px;
    font-size: 1.1rem;
    text-align: center;
    vertical-align: top;
  }
}

.sidebar-toggle .fa {
  position: relative;
  top: -1px;
  display: inline-block;
  margin: 0 5px;
  font-size: 1.1rem;
  text-align: center;
  vertical-align: middle;
}

// Sidebar Closed
.closed {

  .sidebar-wrapper {
    flex: 1 0 $sidebar-width-closed;
    max-width: $sidebar-width-closed;

    &.transit-wider-closed {
      flex: 1 0 33%;
      max-width: $sidebar-width-login;
      transition: flex 3s;

      @include media-breakpoint-down(sm) {
        @include fadein-page;
      }
    }
  }

  .sidebar-item-title,
  .has-arrow::after {
    display: none;
    display: none;
  }

  .main-nav {

    > li > ul {
      height: 0;
      padding: 0;
      visibility: hidden;
    }
  }


}
@include media-breakpoint-up(sm) {
  button.toggler-burger {
    display: none;
  }
}


/*mobil*/
@include media-breakpoint-down(xs) {
  #menu-collapse {
    display: none;
  }
  .toggler-burger{
    display:block;
    width:70px;
    height:70px;
    background:var(--atum-link-color);
    border-radius:40px;
    border:8px solid var(--atum-bg-light);
    position: fixed;
    bottom: 20px;
    right:10px;
    z-index: $zindex-mobil-toggle;

    .navbar-toggler-icon {
      color:var(--toggle-color);

      &:before{
        font: normal normal normal 30px/1 FontAwesome;
        content: "\f00d";
        color:var(--toggle-color);

      }
    }
	&.collapsed {
		.navbar-toggler-icon:before {
			content: "\f0c9";
		}
	}

  }

  .sidebar-menu{
    &.show{
     /* overflow-y: hidden;*/
      max-height: 100vh;
      transition-property: all;
      transition-duration: 1s;
      transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
      bottom:55px;
      position:fixed;
      width:100%;
      z-index:$zindex-mobil-menu;
      display: flex;
      flex-direction: column;

      #sidebarmenu{
        overflow-y:scroll;

      }

    }
    &:not(.show){
      max-height:0;
    }
  }

  #sidebar-wrapper{
    &:not(.show) {
      &:not(.collapse){
        display: none;
      }
    }
  }
}

